package com.lanjiu.im.grpc.pojo;

public class AutoBeautifulCheckNumberRecord {

    private String recordType;
    private Integer tenMillion;
    private Integer oneMillion;
    private Integer oneHundredThousand;
    private Integer tenThousand;
    private Integer oneThousand;

    public String getRecordType() {
        return recordType;
    }

    public void setRecordType(String recordType) {
        this.recordType = recordType;
    }

    public Integer getTenMillion() {
        return tenMillion;
    }

    public void setTenMillion(Integer tenMillion) {
        this.tenMillion = tenMillion;
    }

    public Integer getOneMillion() {
        return oneMillion;
    }

    public void setOneMillion(Integer oneMillion) {
        this.oneMillion = oneMillion;
    }

    public Integer getOneHundredThousand() {
        return oneHundredThousand;
    }

    public void setOneHundredThousand(Integer oneHundredThousand) {
        this.oneHundredThousand = oneHundredThousand;
    }

    public Integer getTenThousand() {
        return tenThousand;
    }

    public void setTenThousand(Integer tenThousand) {
        this.tenThousand = tenThousand;
    }

    public Integer getOneThousand() {
        return oneThousand;
    }

    public void setOneThousand(Integer oneThousand) {
        this.oneThousand = oneThousand;
    }
}
