package com.lanjiu.im.grpc.pojo;

/*
 * 注册群未使用号码实体类型
 * */
public class GroupUnusedBeautifulNumberReal {

    //tenMillion,oneMillion,oneHundredThousand,tenThousand,oneThousand,oneHundred,ten,one
    private Integer tenMillion;
    private Integer oneMillion;
    private Integer oneHundredThousand;
    private Integer tenThousand;
    private Integer oneThousand;
    private Integer oneHundred;
    private Integer ten;
    private Integer one;

    public Integer getTenMillion() {
        return tenMillion;
    }

    public void setTenMillion(Integer tenMillion) {
        this.tenMillion = tenMillion;
    }

    public Integer getOneMillion() {
        return oneMillion;
    }

    public void setOneMillion(Integer oneMillion) {
        this.oneMillion = oneMillion;
    }

    public Integer getOneHundredThousand() {
        return oneHundredThousand;
    }

    public void setOneHundredThousand(Integer oneHundredThousand) {
        this.oneHundredThousand = oneHundredThousand;
    }

    public Integer getTenThousand() {
        return tenThousand;
    }

    public void setTenThousand(Integer tenThousand) {
        this.tenThousand = tenThousand;
    }

    public Integer getOneThousand() {
        return oneThousand;
    }

    public void setOneThousand(Integer oneThousand) {
        this.oneThousand = oneThousand;
    }

    public Integer getOneHundred() {
        return oneHundred;
    }

    public void setOneHundred(Integer oneHundred) {
        this.oneHundred = oneHundred;
    }

    public Integer getTen() {
        return ten;
    }

    public void setTen(Integer ten) {
        this.ten = ten;
    }

    public Integer getOne() {
        return one;
    }

    public void setOne(Integer one) {
        this.one = one;
    }
}
