package com.lanjiu.im.grpc.server.entity;

public class BeautiFulNumberConfigEntity {

    private String tenMillion;
    private String oneMillion;
    private String oneHundredThousand;
    private String tenThousand;
    private String oneThousand;

    public String getTenMillion() {
        return tenMillion;
    }

    public void setTenMillion(String tenMillion) {
        this.tenMillion = tenMillion;
    }

    public String getOneMillion() {
        return oneMillion;
    }

    public void setOneMillion(String oneMillion) {
        this.oneMillion = oneMillion;
    }

    public String getOneHundredThousand() {
        return oneHundredThousand;
    }

    public void setOneHundredThousand(String oneHundredThousand) {
        this.oneHundredThousand = oneHundredThousand;
    }

    public String getTenThousand() {
        return tenThousand;
    }

    public void setTenThousand(String tenThousand) {
        this.tenThousand = tenThousand;
    }

    public String getOneThousand() {
        return oneThousand;
    }

    public void setOneThousand(String oneThousand) {
        this.oneThousand = oneThousand;
    }
}
